--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <div>
 	<input id="sumSqNum" name="sumSqNum" value="0" style="text-align: right" />
-	<button id="sumSqNumButton" name="sumSqNumButton" >get Sum Sequence Squared</button>
+	<button id="sumSqNumButton" name="sumSqNumButton" >Get Sum Sequence Squared</button>
 	<label for="sumSqResult" value="Result" />
 	<p id="sumSqResult">Result</p>
 <div>
@@ -24,7 +24,7 @@ $(document).ready(function(){
 
 	$("#sumSqNumButton").click(function(){
 		var sumSqNum = $("#sumSqNum").val();
-		$.get("/sumsqnum/", function(data){
+		$.get("/sumsqnum/" + sumSqNum, function(data){
 			$("#sumSqResult").text(data);
 		});
 
