Updated service descriptions in the index file.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <h1>Weird Multi-App Web Page</h1>
 
-<h2>App 1</h2>
-<p>Description</p>
+<h2>App 1: Sum of Sequence Squared.</h2>
+<p>This app takes a number, and calculates the sum of the squared values up to the 
+number supplied. It uses the app-engine memcache APIs.</p>
 
 <div>
 	<input id="sumSqNum" name="sumSqNum" value="0" style="text-align: right" />
@@ -17,8 +18,9 @@
 	<p id="sumSqResult">Result</p>
 <div>
 
-<h2>App 2</h2>
-<p>Description</p>
+<h2>App 2: Gif Finder.</h2>
+<p>This app uses the Giphy api to query their gifs, and to randomly select one to load based on the 
+term supplied. It uses the google url-fetch APIs.</p>
 
 <div style="margin: 1em" style="display: block">
 	<input id="imageTerm" name="imageTerm" value="flower" style="text-align: right" />
