--- a/index.html
+++ b/index.html
@@ -5,22 +5,10 @@
 <head></head>
 <body>
 
-<h1>Weird Multi-App Web Page</h1>
+<h1>Find a gif app</h1>
 
-<h2>App 1: Sum of Sequence Squared.</h2>
-<p>This app takes a number, and calculates the sum of the squared values up to the 
-number supplied. It uses the app-engine memcache APIs.</p>
-
-<div>
-	<input id="sumSqNum" name="sumSqNum" value="0" style="text-align: right" />
-	<button id="sumSqNumButton" name="sumSqNumButton" >Get Sum Sequence Squared</button>
-	<label for="sumSqResult" value="Result" />
-	<p id="sumSqResult">Result</p>
-<div>
-
-<h2>App 2: Gif Finder.</h2>
-<p>This app uses the Giphy api to query their gifs, and to randomly select one to load based on the 
-term supplied. It uses the google url-fetch APIs.</p>
+<p>This app uses the Giphy api to query their gifs, and to randomly select one (Initially. After being selected, it remains in cache) to load based on the term supplied. It uses the google url-fetch APIs to query to giphy APIs, and it uses 
+the google memcache api to store previously queried terms.</p>
 
 <div style="margin: 1em" style="display: block">
 	<input id="imageTerm" name="imageTerm" value="flower" style="text-align: right" />
@@ -34,13 +22,6 @@ term supplied. It uses the google url-fetch APIs.</p>
 <script>
 $(document).ready(function(){
 
-	$("#sumSqNumButton").click(function(){
-		var sumSqNum = $("#sumSqNum").val();
-		$.get("/sumsqnum/" + sumSqNum, function(data){
-			$("#sumSqResult").text(data);
-		});
-	});
-
 	$("#imageTermButton").click(function(){
 		var imageTerm = $("#imageTerm").val();
 		$.get("/termimage/" + imageTerm, function(data){
@@ -48,9 +29,8 @@ $(document).ready(function(){
 			$("#imageResult").empty();
 			//Get the first gif url for the term.
 			var jsonData = JSON.parse(data);
-			var gifIndex = Math.floor((Math.random() * (jsonData.data.length)));
-			if(jsonData.data.length > 0){
-				var imageUrl = jsonData.data[gifIndex].images.fixed_height.url
+			if(jsonData.url != ""){
+				var imageUrl = jsonData.url;
 				//$("#imageResult").text(JSON.stringify(jsonData.data));
 				//Make a new element to hold the gif.
 				termImage = document.createElement("img");
